# SPD

./: .gitignore
Problem2/: CMakeLists.txt  main.cpp  tableka-wynikow.ods
Problem2/lib/: BaseProblem.hpp  FPTAS.hpp  LPT.hpp  LSA.hpp  PDynamczine.hpp  PTAS.hpp  Processor.hpp  Task.hpp  Zupelny.hpp
Problem2/src/: BaseProblem.cpp  FPTAS.cpp  LPT.cpp  LSA.cpp  PDynamczine.cpp  PTAS.cpp  Task.h  Zupelny.cpp
Problem3/: CMakeLists.txt  TAIL.TXT  data_to_table.py  main.cpp  readme.txt  results.csv
Problem3/lib/: BandB.hpp  BaseProblem.hpp  FNEH.hpp  Jonson.hpp  NEH.hpp  Task.hpp  Zupelny.hpp
Problem3/src/: BandB.cpp  BaseProblem.cpp  FNEH.cpp  Jonson.cpp  NEH.cpp  Zupelny.cpp
lab4/: BaseProblem.cpp  BaseProblem.h  CMakeLists.txt  Permutations.cpp  Permutations.h  Schrage.cpp  Schrage.h  SortByQ.cpp  SortByQ.h  SortByR.cpp  main.cpp
lab4/lib/: BaseProblem.h  Permutations.h  SchrageDiv.h  SortByR.h  SortByRq.h  Task.h
lab4/src/: BaseProblem.cpp  Permutations.cpp  Schrage.cpp  SchrageDiv.cpp  SortByRq.cpp
lab4/tasks/: six.txt
